# PeroStruc

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst  quickstart.rst  theory.rst
examples/: test_optimize.py
examples/PMN/: 01.optimize.py  03.analyze_chemical_order.py
examples/PMN/initial_configs/: 01.6X6x6_generation.py  02.12X12x12_generation.py
examples/PMN_SCAN/6X6X6/: 01.restart.py  02.plot_energy.py  03.analyze_chemical_order.py  04.check_FIRE_log.py
examples/PMN_SCAN/6X6X6/initial_configs/: sublattice_L12X12X12.lmp
examples/PMN_SCAN/6X6X6/trajs/: f1.lmp  f10.lmp  f100.lmp  f101.lmp  f102.lmp  f103.lmp  f104.lmp  f105.lmp  f106.lmp  f107.lmp  f108.lmp  f109.lmp  f11.lmp  f110.lmp  f111.lmp  f112.lmp  f113.lmp  f114.lmp  f115.lmp  f116.lmp  f117.lmp  f118.lmp  f119.lmp  f12.lmp  f120.lmp  f121.lmp  f122.lmp  f123.lmp  f124.lmp  f125.lmp  f126.lmp  f127.lmp  f128.lmp  f129.lmp  f13.lmp  f130.lmp  f131.lmp  f132.lmp  f133.lmp  f134.lmp  (+318 more)
examples/initial_configs/: disordered_L6X6X6.lmp
examples/trajs/: f1.lmp  f10.lmp  f11.lmp  f12.lmp  f2.lmp  f3.lmp  f4.lmp  f5.lmp  f6.lmp  f7.lmp  f8.lmp  f9.lmp
postprocess/: 03.analyze_chemical_order.py  restart.py
src/perostruc/: __init__.py  optimize.py  optimizer.py  utility.py
tests/: test_optimize.py
utilities/: generate_Asite_disorder.py  generate_Bsite_disorder.py
