[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perostruc"              # pip install name (can include hyphen)
version = "0.1.0"
description = "Structure optimization for perovskites"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "ase>=3.22"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
docs = [
  "sphinx>=7",
  "sphinx-rtd-theme>=2",
  "myst-parser>=2",
]